
package common.child;

import "nonTreeChild1.proto";

option java_package = "test.java.package1";


message Parent1 {
	optional Parent2 good1 = 1;
	optional Child1 good2 = 2;
	//optional .common.child.Child2 good3 = 3;
	// optional sub1.sub2.Child2 good4 = 4;
	optional Child2 good4 = 4;
	optional Inner1 inner1 = 5;
	optional Inner2 inner2 = 6;
	optional Inner2.Inner3 inner3 = 7;

	message Inner1 {

	}

	message Inner2 {
		message Inner3 {

		}
	}
}