
package common.child;
import public "nonTreeChild2.proto";

//import "nonTreeChild1.proto";

option java_package = "test.java.package1";

/*
enum Parent2 {
	VALUE1 = 1;
}
*/

message Parent2 {
	optional string field1 = 1;
}

//message Child2 {
//	optional Parent2 field1 = 1;
//}