import public "nonTreeParent2.proto";

package common.child; // different package from its imports!

option java_package = "test.java.package1";

option cc_generic_services = false;     // auto-added
option java_generic_services = false;   // auto-added
option py_generic_services = false;


message Child1 {
}

message Child2 {
}
